--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node dist/index.js",
     "build": "tsc",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "tsx src/migrate.ts"
+    "db:migrate": "drizzle-kit migrate",
+    "db:check": "drizzle-kit check"
   },
   "repository": {
     "type": "git",
